# Logos

./: CHANGES.md  Cargo.toml  README.md  package.json
.github/workflows/: rust.yml
backend/: package.json
common/: package.json
docs/: ADR-001-CRDT-Selection.md  package.json
exporter/: package.json
frontend/: package.json
frontend/text-editor/: package.json
logos-collab/: Cargo.toml
logos-collab/benches/: collab_benchmark.rs
logos-collab/src/: broadcast.rs  client.rs  lib.rs  presence.rs  protocol.rs  server.rs
logos-collab/src/storage/: delta.rs  mod.rs  rocks.rs  wal.rs
logos-collab/tests/: integration.rs  persistence_integration.rs  presence_integration.rs
logos-core/: ADR-001-FFI-SAFETY.md  Cargo.toml
logos-core/benches/: collab_benchmark.rs
logos-core/src/: ffi.rs  lib.rs
logos-core/src/collab/: mod.rs
logos-desktop/: Cargo.toml
logos-desktop/src/: main.rs  presence.rs  state.rs
logos-layout/: Cargo.toml
logos-layout/benches/: layout_benchmark.rs
logos-layout/src/: bridge.rs  engine.rs  lib.rs  spatial.rs
logos-plugin-system/: Cargo.toml
logos-plugin-system/.github/workflows/: rust.yml
logos-plugin-system/docs/: STRATEGY_ROADMAP.md
logos-plugin-system/logos-core/: Cargo.toml
logos-plugin-system/logos-core/src/: document.rs  lib.rs  node.rs  renderer.rs
logos-plugin-system/logos-desktop/src/: index.html
logos-plugin-system/logos-desktop/src-tauri/: Cargo.toml  tauri.conf.json
logos-plugin-system/logos-desktop/src-tauri/src/: main.rs
logos-render/: Cargo.toml
logos-render/benches/: render_benchmark.rs
logos-render/src/: bridge.rs  context.rs  lib.rs  renderer.rs  vertex.rs
logos-render/src/pipelines/: cursor.rs  mod.rs  rect.rs  text.rs
logos-render/src/shaders/: cursor.wgsl  rect.wgsl  text.wgsl
logos-text/: Cargo.toml
logos-text/benches/: text_benchmark.rs
logos-text/src/: atlas.rs  engine.rs  fonts.rs  lib.rs
logos-wasm/: Cargo.toml
mcp/: package.json
plugins/: package.json
plugins/libs/plugin-types/: package.json
plugins/libs/plugins-runtime/: package.json
plugins/libs/plugins-styles/: package.json
render-wasm/: package.json
