[package]
name = "logos-collab"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
futures-util = "0.3.31"
log = "0.4.29"
lz4_flex = "0.12.0"
rocksdb = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["connect"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
yrs = "0.25.0"

[dev-dependencies]
criterion = "0.8.2"
tempfile = "3.19.1"

[[bench]]
name = "collab_benchmark"
harness = false
