[package]
name = "logos-core"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
taffy = "0.9.2"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
yrs = "0.25.0"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "collab_benchmark"
harness = false
