[package]
name = "logos-render"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
log = "0.4.29"
logos-core = { version = "0.1.0", path = "../logos-core" }
logos-layout = { version = "0.1.0", path = "../logos-layout" }
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["v4"] }
wgpu = "24"

[dev-dependencies]
criterion = "0.8.2"
pollster = "0.4"

[[bench]]
name = "render_benchmark"
harness = false
