[package]
name = "logos-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
yrs = "0.18" # CRDT support
bitflags = "2.4"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
raw-window-handle = "0.6.2"
wgpu = "24.0.5"


