[package]
name = "logos-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
logos-core = { path = "../../logos-core" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
